# ceynic-api

./: .gitignore  Procfile  README.md  config.py  forms.py  models.py  package-lock.json  package.json  paypal_client.py  pyproject.toml  requirements.txt
app/: __init__.py  email.py  forms.py  models.py  paypal.py  paypal_client.py  routes.py  views.py
app/admin/: crud.py  routes.py
app/auth/: email.py  forms.py  routes.py
app/main/: email.py  forms.py  routes.py
app/static/: scripts.js  styles.css
app/templates/: 404.html  500.html  about.html  browse.html  contact.html  home.html  index.html  layout.html  login.html  orderconfirmation.html  painting.html  reset_password_request.html
backend/: pyproject.toml
backend/src/: config.py  database.py  dependencies.py  http_client.py  main.py
backend/src/models/: medium.py  order.py  product.py  refresh_token.py  user.py
backend/src/models/enums/: order_status.py  product_sort_params.py
backend/src/models/schemas/: create_order_request.py  create_order_response.py  order.py  paypal_auth_response.py  product.py  recaptcha_response.py  token.py  token_refresh_request.py
backend/src/routes/: auth.py  messages.py  orders.py  products.py  users.py
backend/src/services/: auth_service.py  aws_service.py  messages_service.py  orders_service.py  products_service.py  refresh_tokens_service.py  users_service.py
backend/src/templates/: contact.html
frontend/: package-lock.json  package.json
frontend/src/: app.css  app.d.ts  hooks.server.ts
src/: app.d.ts  config.py  database.py  dependencies.py  main.py
(+106 files in other folders)
