[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jeffrey Nicholas <jefnic23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
fastapi-mail = "^1.4.1"
sqlmodel = "^0.0.18"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
